<resources>
    <string name="app_name">Midterm N1</string>
    <string name="numbers_api">Numbers API</string>
    <string name="trivia">Trivia</string>
    <string name="date">Date</string>
    <string name="year">Year</string>
    <string name="number">Number</string>
    <string name="enter_number">Enter Number</string>
    <string name="month">Month</string>
    <string name="enter_month_number">Enter Month Number</string>
    <string name="day">Day</string>
    <string name="enter_day_number">Enter Day Number</string>
    <string name="check">Check</string>
    <string name="waiting_for_response">Waiting for Response...</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="lyrics">Lyrics</string>
    <string name="what_are_you_interested_in">What are you interested in ?</string>
    <string name="math">Math</string>
    <string name="music">Music</string>
    <string name="sign_out">Sign Out</string>
</resources>
